--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,6 @@
 $accentColor: #eaa76c;
 $mainFontColor: rgba(0, 0, 0, 0.7);
+$greenColor: #4ebd6f;
+$darkColor: #222831;
 $mainFont: "Roboto", sans-serif;
 $titleFont: "Roboto", sans-serif;
