vue reveal, animation, margin padding

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,4 +3,4 @@ $mainFontColor: rgba(0, 0, 0, 0.7);
 $greenColor: #4ebd6f;
 $darkColor: #222831;
 $mainFont: "Roboto", sans-serif;
-$titleFont: "Roboto", sans-serif;
+$titleFont: "Roboto Slab", serif;
