--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -85,6 +85,8 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  scroll-behavior: smooth;
+
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -102,7 +104,6 @@ section {
 }
 body {
   line-height: 1;
-  scroll-behavior: smooth;
 
 }
 ol,
@@ -167,4 +168,8 @@ input {
 }
 textarea, button {
   outline: none;
+}
+.colored {
+  color: $accentColor;
+  font-weight: bolder;
 }
