--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,5 @@
-$accentColor: #fc9e4c;
+// $accentColor: #fc9e4c;
+$accentColor: #FB9C1A;
 $mainFontColor: rgba(0, 0, 0, 0.7);
 $greenColor: #4ebd6f;
 $darkColor: #222831;
