--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,3 +5,4 @@ $greenColor: #4ebd6f;
 $darkColor: #222831;
 $mainFont: "Roboto", sans-serif;
 $titleFont: "Roboto Slab", serif;
+$montserratFont:'Montserrat', sans-serif;
