Added fonts to project

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,4 @@ $darkColor: #222831;
 $mainFont: "Roboto", sans-serif;
 $titleFont: "Roboto Slab", serif;
 $montserratFont:'Montserrat', sans-serif;
+$playFont: 'Play', sans-serif;
