--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // $accentColor: #fc9e4c;
 $accentColor: #FB9C1A;
 $mainFontColor: rgba(0, 0, 0, 0.7);
-$greenColor: #4ebd6f;
+$greenColor: #39c262;
 $darkColor: #222831;
 $mainFont: "Roboto", sans-serif;
 $titleFont: "Roboto Slab", serif;
