--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,9 +1,13 @@
 // $accentColor: #fc9e4c;
-$accentColor: #FB9C1A;
-$mainFontColor: rgba(0, 0, 0, 0.7);
+// $accentColor: #fb9c1a;
+// $accentColor: #1953bd;
+$accentColor: #246be8;
+$mainFontColor: #42484e;
+$menuColor: #344759;
 $greenColor: #39c262;
 $darkColor: #222831;
-$mainFont: "Roboto", sans-serif;
-$titleFont: "Roboto Slab", serif;
-$montserratFont:'Montserrat', sans-serif;
+$lightgrayColor: rgba(0, 0, 0, 0.6);
+$mainFont: 'Roboto', sans-serif;
+$titleFont: 'Roboto Slab', serif;
+$montserratFont: 'Montserrat', sans-serif;
 $playFont: 'Play', sans-serif;
