--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,4 +1,5 @@
 @import './hamburger';
+@import './variables';
 
 html,
 body,
@@ -88,7 +89,6 @@ video {
   font: inherit;
   vertical-align: baseline;
   scroll-behavior: smooth;
-
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -106,7 +106,7 @@ section {
 }
 body {
   line-height: 1;
-
+  color: $mainFontColor;
 }
 ol,
 ul {
@@ -120,7 +120,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
+  content: '';
   content: none;
 }
 table {
@@ -168,7 +168,8 @@ input {
   box-shadow: none;
   outline: none;
 }
-textarea, button {
+textarea,
+button {
   outline: none;
 }
 .colored {
