--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,13 +1,12 @@
-// $accentColor: #fc9e4c;
-// $accentColor: #fb9c1a;
-// $accentColor: #1953bd;
 $accentColor: #246be8;
 $mainFontColor: #42484e;
 $menuColor: #344759;
-$greenColor: #39c262;
+$greenColor: #02b97b;
+$redColor: #ec7063;
 $darkColor: #222831;
 $lightgrayColor: rgba(0, 0, 0, 0.6);
 $mainFont: 'Roboto', sans-serif;
 $titleFont: 'Roboto Slab', serif;
+$logoFont: 'Roboto Slab', serif;
 $montserratFont: 'Montserrat', sans-serif;
 $playFont: 'Play', sans-serif;
