--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,7 @@ $greenColor: #02b97b;
 $redColor: #ec7063;
 $darkColor: #222831;
 $lightgrayColor: rgba(0, 0, 0, 0.6);
+$socialsColor: #4b4b4b;
 $mainFont: 'Roboto', sans-serif;
 $titleFont: 'Roboto Slab', serif;
 $logoFont: 'Roboto Slab', serif;
